# Finance_Data_Processing_and_Access_Control_Backend

./: .env.example  .gitignore  Readme.md  finance.db  main.py  pyproject.toml  requirements.txt
backend/: .gitignore  finance.db  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  db.py  deps.py
backend/models/: pydantic_schemas.py
backend/routes/: __init__.py  admin_routes.py  auth_routes.py  dashboard_routes.py  finance_routes.py  users_routes.py
backend/services/: security.py
backend/utils/: response_generator.py  roles.py
core/: config.py
frontend/: index.html  package-lock.json
frontnend/: .env.example  package-lock.json  package.json
models/: db_models.py  pydantic_schemas.py
routes/: auth_routes.py  dashboard_routes.py  finance_routes.py  users_routes.py
services/: rate_limiter.py
utils/: logger.py  response_generator.py  roles.py
